# PlanetoidEngine

./: .gitignore  CMakeLists.txt  PlanetoidEngine.sln  README.md
Core/: CMakeLists.txt
Core/ext/box2d-2.4.1/: CMakeLists.txt
Core/ext/freetype/: CMakeLists.txt
Core/ext/glad/: glad.c
Core/include/: PlanetoidEngine.h
Core/include/Planetoid/: PlanetoidCore.h
Core/include/Planetoid/Core/: Application.h  AssetStore.h  Delegate.h  EntryPoint.h  Extensions.h  FileIO.h  InputManager.h  Log.h  Timeline.h  TimelineManager.h  UUID.h  Window.h
Core/include/Planetoid/Renderer/: Framebuffer.h  Renderer.h  Shader.h  Texture.h
Core/include/Planetoid/Scenes/: Components.h  Entity.h  Scene.h  SceneManager.h
Core/include/Planetoid/ScriptEngine/: ScriptAPI.h  ScriptComponent.h  ScriptDictionary.h
Core/include/Planetoid/VirtualFileSystem/: VirtualFileSystem.h
Core/include/glad/: glad.h
Core/src/Core/: Application.cpp  AssetStore.cpp  Extensions.cpp  FileIO.cpp  InputManager.cpp  Log.cpp  TimelineManager.cpp  UUID.cpp  Window.cpp
Core/src/Renderer/: Framebuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
Core/src/Scenes/: Components.cpp  Entity.cpp  Scene.cpp  SceneManager.cpp
Core/src/ScriptEngine/: ScriptAPI.cpp  ScriptComponent.cpp  ScriptDictionary.cpp
Core/src/VirtualFileSystem/: VirtualFileSystem.cpp
Dependencies/: Dependencies.vcxproj  Dependencies.vcxproj.filters
Dependencies/include/glad/: glad.h
Dependencies/src/: glad.c
Editor/: CMakeLists.txt
Editor/include/: Components.h  EditorContext.h  PerformanceMetrics.h  ProjectContext.h  Starship.h
Editor/src/: Starship.cpp  main.cpp
PlanetoidEngine/: PlanetoidEngine.vcxproj  PlanetoidEngine.vcxproj.filters
PlanetoidEngine/rsc/shaders/: shader.frag  shader.vert
PlanetoidEngine/src/: AssetManager.cpp  AssetManager.h  GLDisplay.cpp  GLDisplay.h  Source.cpp
PlanetoidEngine/src/Resources/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
